<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Put here the TMDB API key and uncomment the line -->
    <!-- <string name="api_key">PUT_YOUR_TMDB_API_KEY_HERE</string> -->

    <string name="action_sort_popularity">Sort by popularity</string>
    <string name="action_sort_best_rated">Sort by best rated</string>
    <string name="action_show_favorites">Show favorites</string>
    <string name="action_toggle_favorite">Toggle favorite</string>

    <string name="movie_cover">Movie cover</string>
    <string name="release_date">Release date</string>
    <string name="user_rating">User rating</string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="trailers">Trailers</string>
    <string name="review">Review</string>
    <string name="reviews">Reviews</string>

    <string name="movie_saved_as_favorite">Movie saved as favorite</string>
    <string name="movie_error_saving_favorite">Error when saving movie as favorite</string>
    <string name="movie_deleted_as_favorite">Movie deleted as favorite</string>
    <string name="movie_error_deleting_favorite">Error when deleting movie as favorite</string>

    <!-- ERRORS -->
    <string name="movie_not_found">Movie not found</string>
    <string name="trailer_not_found">Trailer not found</string>
    <string name="invalid_response">Invalid response from server</string>
    <string name="no_response">Unable to get response from server. Are you connected to the Internet?</string>
    <string name="no_app_for_video_intent">Unable to find any app to play the video</string>

</resources>
